# hyphen-cuckoo

./: .gitignore  AUDIT_TODO_20260521.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: android.yml  main.yml
docs/: DOCS_INDEX.md  android-crash-rca-2026H2.md  audit-v2.2.0-web-server-2026-05-23.md  backlog-and-fix-list.md  dev-report-v3-2026H2.md  dev-report-v3.1-2026H2.md  dev-report-v3.2-campaign.md  dev-report-v3.3-2026H2.md  dev-report-v3.4-2026H2.md  dev-report-v3.5-2026H2.md  issues-analysis-2026-06-06.md  kano-backlog-2026H2.md  multidimensional-audit-2026-05-22.md  print-creative-module-design.md  research-qrcode-marketing-2026H2.md  roadmap-kano-directions-2026H2.md  user-guide.md
docs/workflow/: dev-report-v3.6.1.md  v3.7-dev-roadmap.md
scripts/: sign-android.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  database.rs  lib.rs  printer.rs  qr_token.rs  sync_server.rs  updater_check.rs  web_server.rs
src-tauri/src/database/: customers.rs  materials.rs  menu.rs  mod.rs  orders.rs  print.rs  printers.rs  purchase.rs  recipes.rs  reports.rs  schema.rs  supply.rs
src/components/: UpdateBanner.tsx  UpdateDialog.tsx  app-header.tsx  app-sidebar.tsx  error-boundary.tsx  print-element-editor.tsx  role-switch-dialog.tsx  setup-wizard.tsx  styled-qr.tsx
src/hooks/: useAppActions.ts  useAppData.ts  useAutoUpdate.ts  usePartialLoadData.ts
src/lib/: logger.ts  roles.ts  transport.ts
(+32 files in other folders)
