[package]
name = "cuckoo"
version = "3.5.0"
description = "配方驅動餐飲作業系統"
authors = ["Cuckoo Team"]
edition = "2021"

[lib]
name = "cuckoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
